crates/tlang_parser/tests/snapshots/parser__string_literal.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (r#\"\"foo\";\"#)"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: Expr(Expr(
        id: 4,
        kind: Literal(String("foo")),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 5,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 5,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 6,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 6,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 6,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 6,
    ),
  ),
)
