crates/tlang_parser/tests/snapshots/parser__tagged_string_multiple_interpolations.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (r#\"sql\"SELECT {cols} FROM {table}\";\"#)"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: Expr(Expr(
        id: 7,
        kind: TaggedString(
          tag: Expr(
            id: 6,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "sql",
                  span: Span(
                    start: 0,
                    end: 4,
                    start_lc: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 4,
                    ),
                  ),
                ),
              ],
              res: Unresolved,
              span: Span(
                start: 0,
                end: 4,
                start_lc: LineColumn(
                  line: 0,
                  column: 0,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 4,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 0,
              end: 4,
              start_lc: LineColumn(
                line: 0,
                column: 0,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 4,
              ),
            ),
          ),
          parts: [
            "SELECT ",
            " FROM ",
            "",
          ],
          exprs: [
            Expr(
              id: 4,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "cols",
                    span: Span(
                      start: 12,
                      end: 16,
                      start_lc: LineColumn(
                        line: 0,
                        column: 12,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 16,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: 12,
                  end: 16,
                  start_lc: LineColumn(
                    line: 0,
                    column: 12,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 16,
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 12,
                end: 16,
                start_lc: LineColumn(
                  line: 0,
                  column: 12,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 16,
                ),
              ),
            ),
            Expr(
              id: 5,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "table",
                    span: Span(
                      start: 24,
                      end: 29,
                      start_lc: LineColumn(
                        line: 0,
                        column: 24,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 29,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: 24,
                  end: 29,
                  start_lc: LineColumn(
                    line: 0,
                    column: 24,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 29,
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 24,
                end: 29,
                start_lc: LineColumn(
                  line: 0,
                  column: 24,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 29,
                ),
              ),
            ),
          ],
        ),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 4,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 4,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 32,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 32,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 32,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 32,
    ),
  ),
)
