crates/tlang_parser/tests/snapshots/parser__tagged_string_simple.snap
---
source: crates/tlang_parser/tests/parser.rs
assertion_line: 275
expression: "parse! (r#\"re\"\\d+\";\"#)"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: Expr(Expr(
        id: 5,
        kind: TaggedString(
          tag: Expr(
            id: 4,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "re",
                  span: Span(
                    start: 0,
                    end: 7,
                    start_lc: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 7,
                    ),
                  ),
                ),
              ],
              res: Unresolved,
              span: Span(
                start: 0,
                end: 7,
                start_lc: LineColumn(
                  line: 0,
                  column: 0,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 7,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 0,
              end: 7,
              start_lc: LineColumn(
                line: 0,
                column: 0,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 7,
              ),
            ),
          ),
          parts: [
            "\\d+",
          ],
          exprs: [],
        ),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 7,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 7,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 8,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 8,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 8,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 8,
    ),
  ),
)
