crates/tlang_parser/tests/snapshots/parser__tagged_string_with_expression.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (r#\"tag\"{x + 1}\";\"#)"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: Expr(Expr(
        id: 12,
        kind: Call(CallExpression(
          callee: Expr(
            id: 9,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "tag",
                  span: Span(
                    start: 0,
                    end: 4,
                    start_lc: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 4,
                    ),
                  ),
                ),
              ],
              res: Unresolved,
              span: Span(
                start: 0,
                end: 4,
                start_lc: LineColumn(
                  line: 0,
                  column: 0,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 4,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 0,
              end: 4,
              start_lc: LineColumn(
                line: 0,
                column: 0,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 4,
              ),
            ),
          ),
          arguments: [
            Expr(
              id: 10,
              kind: List([
                Expr(
                  id: 4,
                  kind: Literal(String("")),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 0,
                    end: 0,
                    start_lc: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                  ),
                ),
                Expr(
                  id: 8,
                  kind: Literal(String("")),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 0,
                    end: 0,
                    start_lc: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                  ),
                ),
              ]),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 0,
                end: 4,
                start_lc: LineColumn(
                  line: 0,
                  column: 0,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 4,
                ),
              ),
            ),
            Expr(
              id: 11,
              kind: List([
                Expr(
                  id: 7,
                  kind: BinaryOp(BinaryOpExpression(
                    op: Add,
                    lhs: Expr(
                      id: 5,
                      kind: Path(Path(
                        segments: [
                          Ident(
                            name: "x",
                            span: Span(
                              start: 5,
                              end: 6,
                              start_lc: LineColumn(
                                line: 0,
                                column: 5,
                              ),
                              end_lc: LineColumn(
                                line: 0,
                                column: 6,
                              ),
                            ),
                          ),
                        ],
                        res: Unresolved,
                        span: Span(
                          start: 5,
                          end: 6,
                          start_lc: LineColumn(
                            line: 0,
                            column: 5,
                          ),
                          end_lc: LineColumn(
                            line: 0,
                            column: 6,
                          ),
                        ),
                      )),
                      leading_comments: [],
                      trailing_comments: [],
                      span: Span(
                        start: 5,
                        end: 6,
                        start_lc: LineColumn(
                          line: 0,
                          column: 5,
                        ),
                        end_lc: LineColumn(
                          line: 0,
                          column: 6,
                        ),
                      ),
                    ),
                    rhs: Expr(
                      id: 6,
                      kind: Literal(UnsignedInteger(1)),
                      leading_comments: [],
                      trailing_comments: [],
                      span: Span(
                        start: 9,
                        end: 10,
                        start_lc: LineColumn(
                          line: 0,
                          column: 9,
                        ),
                        end_lc: LineColumn(
                          line: 0,
                          column: 10,
                        ),
                      ),
                    ),
                  )),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 5,
                    end: 10,
                    start_lc: LineColumn(
                      line: 0,
                      column: 5,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 10,
                    ),
                  ),
                ),
              ]),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 0,
                end: 4,
                start_lc: LineColumn(
                  line: 0,
                  column: 0,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 4,
                ),
              ),
            ),
          ],
        )),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 4,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 4,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 13,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 13,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 13,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 13,
    ),
  ),
)
