crates/tlang_parser/tests/snapshots/parser__unary_minus.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse!(\"-1;\")"
---
Node(
  ast_node: Program([
    Node(
      ast_node: ExpressionStatement(Node(
        ast_node: UnaryOp(Minus, Node(
          ast_node: Literal(Integer(1)),
          symbol_table: None,
        )),
        symbol_table: None,
      )),
      symbol_table: None,
    ),
  ]),
  symbol_table: None,
)
